Closed Bug 213781 Opened 23 years ago Closed 23 years ago

Floating object rendered vertically incorrectly

Categories

(Core :: Layout, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla1.5beta

People

(Reporter: gigalo, Assigned: dbaron)

Details

(Keywords: testcase, Whiteboard: [patch])

Attachments

(3 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4b) Gecko/20030516 MSIE/0.6 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4b) Gecko/20030516 /0.6 In the page: http://customwire.ap.org/dynamic/stories/D/DOWNLOADING_MUSIC?SITE=OHCLE&SECTION=HOME&TEMPLATE=DEFAULT there is an element rendered incorrectly in terms of vertical positioning. The incorrectly rendered object is a grey box, bounded in a thin black line, containing a couple of advertisements. The box is rendered as top aligned with the 5'th paragraph, when it should be aligned with the top of the 6'th paragraph. I noticed that this error only because the offending item overlays some text. Reproducible: Always Steps to Reproduce: Load page, start reading, and the error is almost immediately evident
My mistake . . . the useragent should have "Mozilla Firebird" in the name. I had to delete that and insert MSIE in order to allow the browser to get to sites that restrict access to Internet Explorer
Hmm.. That content is not actually positioned. It's not clear to me how it ends up outside its iframe. What we need here is something like a smallish testcase....
Assignee: position → other
Component: Layout: R & A Pos → Layout
Keywords: qawanted
OS: Windows XP → All
Hardware: PC → All
Attached file testcase
I don't understand what's happening either. But hopefully to help someone, here are several things, any one of which I find fixes the problem if you pare it out of the testcase: 1. Delete the top of page IFRAME 2. Remove align=left from the overall containing TABLE 3. Remove the invalid SPAN tag that is wrapped around all the page content 4. Remove the align=right from the TABLE holding the IFRAME that is the point of contention of this bug report.
Keywords: qawantedtestcase
Looks like a view positioning problem. I'm guessing we're not copying NS_FRAME_HAS_CHILD_WITH_VIEW state bits.
(I also wonder why the IFRAME doesn't occupy its full height on the initial reflow.)
Attached patch patchSplinter Review
Fix the bug by setting NS_FRAME_HAS_CHILD_WITH_VIEW correctly.
Attachment #128521 - Flags: superreview?(bzbarsky)
Attachment #128521 - Flags: review?(bzbarsky)
Never mind the IFRAME stuff -- I think the initial incorrect position is probably coming from the "unconstrained reflow" or something like that.
Attachment #128521 - Flags: superreview?(bzbarsky)
Attachment #128521 - Flags: superreview+
Attachment #128521 - Flags: review?(bzbarsky)
Attachment #128521 - Flags: review+
Taking.
Assignee: other → dbaron
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P2
Whiteboard: [patch]
Target Milestone: --- → mozilla1.5beta
Fix checked in to trunk, 2003-07-25 15:04 -0700.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Verified 2003072604 PC/WinXP
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: