Ensure that NS_FRAME_HAS_CHILD_WITH_VIEW is set correctly when something has a view and is inside a float inside the block part of a block-inside-inline split.  b=213781  r+sr=bzbarsky